R Use direct Path factory method.
Signed-off-by: Math_RPG <maugusilva.santos@gmail.com>